--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,8 @@ site_name: HackaMove
 nav:
   - Ktorz-net <: '..'
   - Home: 'index.md'
+  - Game Rules: 'rules.md'
+  - Bot player: 'bots.md'
 
 markdown_extensions:
   - attr_list
