--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Game Rules: 'rules.md'
   - Bot Player: 'bots.md'
   - Distance and Paths: 'dijkstra.md'
+  - F.A.Q: 'faq.md'
 
 markdown_extensions:
   - attr_list
