--- a/sandbox/config-7x10.json
+++ b/sandbox/config-7x10.json
@@ -4,9 +4,13 @@
         [ 0,  0,  0,  0,  0,  0,  0,  0, -1,  0],
         [ 0,  0, -1, -1, -1, -1,  0,  0, -1,  0],
         [ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
-        [ 0, -1,  0, -1, -1,  0,  0, -1, -1, -1],
-        [ 0, -1,  0, -1, -1,  0,  0, -1, -1, -1],
+        [ 0, -1,  0,  0,  0,  0,  0, -1, -1, -1],
+        [ 0,  0,  0, -1, -1,  0,  0, -1, -1, -1],
         [ 0,  0,  0,  0,  0,  0,  0, -1, -1, -1]
     ],
-    "tic": 50
+    "tic": 50,
+    "numberOfMissions": 8,
+    "numberOfPlayers": 1,
+    "numberOfRobots": 4,
+    "numberOfPVips": 1
 }
