--- a/sandbox/config-7x10.json
+++ b/sandbox/config-7x10.json
@@ -12,5 +12,6 @@
     "numberOfMissions": 8,
     "numberOfPlayers": 1,
     "numberOfRobots": 4,
-    "numberOfPVips": 1
+    "numberOfPVips": 1,
+    "vipZones": [1, 2, 3, 9, 20, 22, 23, 45, 46]
 }
